<resources>
    <string name="app_name" translatable="false">Hajj Smart ID</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="chatmessage">I am Sorry, I do not have the answer to that question, May i put you on the hold   </string>
    <string name="opensans">OpenSans-Bold.ttf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="google_api">AIzaSyCD2_EOa4dw4hRv7Z3P-rSBcQsYYhT7Hs4</string>
    <string name="Connect">Connect</string>
    <string name="emergency_call">To report to emergency services, call 911 or press SoS</string>
    <string name="locate_def">Locate</string>
    <string name="sos">SOS</string>
    <string name="schedule">Schedule</string>
    <string name="navigation">Notification</string>
    <string name="profile">Profile</string>
    <string name="placeholder_em_user">Gregory Ramirez</string>
    <string name="placeholder_user">Russel Lyons</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_email">Emergency Email</string>
    <string name="role">Role</string>
    <string name="hajj_id1">Hajj ID 1</string>
    <string name="hajj_id2">Hajj ID 2</string>
    <string name="camp_id">Camp ID</string>
    <string name="camp_name">Camp Name</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_room">Hotel Room</string>
    <string name="visa_date">Visa Date</string>
    <string name="visa_no">Visa No</string>
    <string name="capture_incident">Capture pictures from your day</string>
    <string name="chat_history">Chat History</string>
    <string name="incident_history">Pictures History</string>
    <string name="scan_history">Scan Pilgrim ID</string>
    <string name="placeholder_unread">2</string>
    <string name="placeholder_organisers">Organizers</string>
    <string name="current_location">Current location</string>
    <string name="placeholder_location">9520 Roghem key</string>
    <string name="location_hint">Places or people</string>
    <string name="placeholder_contacts">Contacts (6)</string>
    <string name="placeholder_suggestion">Suggestion (5)</string>
    <string name="locate">Locate</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="unfollow">Unfollow</string>
    <string name="logout">Logout</string>
    <string name="enableSOS">Enable SOS</string>
    <string name="my_qr_code">My Bar Code</string>
    <string name="preferences">Preferences</string>
    <string name="reportIncidents">Report Incidents</string>
    <string name="reportingfor">Reporting for?</string>
    <string name="Continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="createIncidents">Create Incidents</string>
    <string name="incidentsHistory">Pictures History</string>
    <string name="type_message">Type message</string>
    <string name="incident_created_for">Picture created for</string>
    <string name="report_incident">Report Incident</string>
    <string name="organizers">Organizers</string>
    <string name="share">Share</string>
    <string name="locate_all">Locate All</string>
    <string name="my_Organizers">My Organizers</string>
    <string name="hajj_health_profille">Health Profile</string>
    <string name="notification">Notification</string>
    <string name="clear_All">Clear All</string>
    <string name="all">All</string>
    <string name="alert">Alerts</string>
    <string name="message">Message</string>
    <string name="request">Request</string>
    <string name="first_Name">First Name</string>
    <string name="full_name">FIRST NAME</string>
    <string name="full_name1">Full Name</string>
    <string name="user_full_name">FIRST NAME *</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="contact">Contact</string>
    <string name="doB">DoB</string>
    <string name="country">Country</string>
    <string name="add_Piligrims">Add Pilgrims</string>
    <string name="pilgrims">Pilgrims</string>
    <string name="passport_number">PASSPORT NUMBER</string>
    <string name="establishment_id">ESTABLISHMENT</string>
    <string name="user_establishment_id">ESTABLISHMENT *</string>
    <string name="office_id">OFFICE ID</string>
    <string name="office_id_user">OFFICE ID *</string>
    <string name="confirm">Confirm</string>
    <string name="go_back">Go back</string>
    <string name="user_number">MOBILE NUMBER *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart_desease">Heart Diseases</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="date_of_birth_user">DATE OF BIRTH *</string>
    <string name="rescan_id">Want to rescan your ID?</string>
    <string name="scan_again">Scan Again</string>
    <string name="account_confirm">Account Confirmed</string>
    <string name="label_done">We are almost done .</string>
    <string name="confirm_detail">Can you confirm few details for us ?</string>
    <string name="confirm_emergency">Confirm your emergency Contact.</string>
    <string name="label_proceed">How do you like to proceed?</string>
    <string name="scan_nfc">Scan NFC to Proceed</string>
    <string name="label_or">or </string>
    <string name="label_enter_boundryid">Please Enter Passport or Boundary ID </string>
    <string name="nfc_detected">NFC detected!</string>
    <string name="scan_barcode">Scan bar code </string>
    <string name="use_nfc">Use NFC</string>
    <string name="label_calcel_dialog">Cancel</string>
    <string name="email_mobile">EMAIL/MOBILE</string>
    <string name="label_password">PASSWORD</string>
    <string name="label_login">Login</string>
    <string name="nfc_success">Your smart phone is equiped with NFC to Scan the HajjID card.Would you like to proceed?</string>
    <string name="nfc_success_dialog">Do you have Smart Hajj ID ?</string>
    <string name="scan_nfc_label">Do you want to proceed with NFC or Bar code ? ?</string>
    <string name="label_ok">Yes</string>
    <string name="label_cancel">No</string>
    <string name="label_gender">Gender</string>
    <string name="language">Language</string>
    <string name="share_My_Location">Share My Location</string>
    <string name="Remove_from_contact">Remove from contact</string>
    <string name="personal_Information">Personal Information</string>
    <string name="health_Information">Health Information</string>
    <string name="hajj_Information">Hajj Information</string>
    <string name="officeNumbe">Office ID</string>
    <string name="tagId">Tag ID</string>
    <string name="tourCampNumber">Tag Number</string>
    <string name="tourCampName">Tag Name</string>
    <string name="hajjNumber">Hajj ID</string>
    <string name="Bloodtype">Blood Group</string>
    <string name="Suger">Diabetes</string>
    <string name="HeartDiseases">Heart Diseases </string>
    <string name="BloodPresure">Blood Presure</string>
    <string name="gender">Gender</string>
    <string name="Enter_Hajj_id">Enter Hajj ids</string>
    <string name="Enter_Pilgrims">Enter Pilgrims ids</string>
    <string name="Select_Day">Select Day</string>
    <string name="OR">OR</string>
    <string name="bus_Schedule">Bus Schedule</string>
    <string name="train_Schedule">Train Schedule</string>
    <string name="Events">Events</string>
    <string name="Jamrat_bridge">Jamrat bridge</string>
    <string name="Sent">Sent</string>
    <string name="Select_Role">Select Role</string>
    <string name="Team_Lead">Team Lead</string>
    <string name="Hajj_id">HAJJ ID</string>
    <string name="nationalit_label">Nationality</string>
    <string name="user_nationalit_label">Nationality *</string>
    <string name="Mutawiff">Mutawiff</string>
    <string name="Murshid">Murshid</string>
    <string name="HajjDetails">Hajj Details</string>
    <string name="Health">Health Profile</string>
    <string name="Volunteer">Volunteer</string>
    <string name="Ok">Ok</string>
    <string name="Scan_More">Scan More</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Creating_for">Creating for</string>
    <string name="lbl_profile">Profile</string>
    <string name="enter_emailId">Enter Email ID</string>
    <string name="enter_emergency_contact">Enter Emergency Contact</string>
    <string name="enetr_contact">Enter Contact Number</string>
    <string name="invalid_passportno"> Invalid Hajj Number</string>
    <string name="label_started">Get Started</string>
    <string name="label_success">Your onboarding has been successfully completed</string>
    <string name="label_prceed_id">Passport or boundary ID</string>
    <string name="valid_max_tipamount">Maximum length should be 10</string>
    <string name="profile_hajjid">Hajj Id</string>
    <string name="profile_passport">Passport</string>
    <string name="profile_officeid">OfficeId</string>
    <string name="departing_at">Departing at</string>
    <string name="please_enter_contact">Please enter your Contact</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="log_out">Log out</string>
    <string name="log_out_popup">Are you sure you want to logout?</string>
    <string name="path_and_gate">Path and Gate</string>
    <string name="please_select_reason">Please select a reason to continue</string>
    <string name="starting_at">Starting at</string>
    <string name="stonin_day">Starting at</string>
    <string name="take_survey">Take Survey</string>
    <string name="plese_try_again">Technical Error, Please try again</string>
    <string name="loading_data">Loading Data</string>
    <string name="enter_firstname">Please Enter First Name</string>
    <string name="enter_mobile">Please Enter Mobile Number</string>
    <string name="enter_dob">Please Enter Date of Birth</string>
    <string name="enter_hajjaid">Please enter Hajj ID</string>
    <string name="accident">ACCIDENT</string>
    <string name="lbl_conges">CONGESTION</string>
    <string name="labl_medical">MEDICAL HELP</string>
    <string name="lbl_lost">LOST AND FOUND</string>
    <string name="lbl_missing">MISSING PERSON</string>
    <string name="contact_removed">Contact has been removed</string>
    <string name="already_added">Pilgrim already exists</string>
    <string name="already_hajj">HAJJ ID is  already added</string>
    <string name="title_create_fragment">Create %1$s item</string>
    <string name="title_update_fragment">Update</string>
    <string name="mandatory_warning">This is a mandatory field</string>
    <string name="welcome_screen_headline_label">Welcome</string>
    <string name="welcome_screen_detail_label">Explore the SAP Cloud Platform SDK for Android with this generated app</string>
    <string name="welcome_screen_footnote_label">You can try out the SDK features in demo mode.</string>
    <string name="welcome_screen_primary_button_label">Get Started</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="delete_dialog_title">DELETE</string>
    <string name="delete_one_item">Do you really want to delete the selected item?</string>
</resources>